Fixed risk table overflowing, enabled scroll when overflow

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -562,6 +562,7 @@ header nav li a:hover {
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    overflow-x: scroll;
     width: 90%;
 }
 
@@ -664,5 +665,9 @@ footer {
 
     .element-clickable-grid-item img {
         filter: blur(0);
+    }
+
+    .element-container {
+        width: 90%;
     }
 }
